--- a/Part2/package.json
+++ b/Part2/package.json
@@ -5,19 +5,21 @@
   "main": "index.js",
   "scripts": {
     "start": "ts-node index.ts",
-    "test": "jest"
+    "test": "jest --testTimeout=10000"
   },
   "devDependencies": {
     "@tsconfig/node14": "^1.0.1",
     "@types/eslint": "^7.2.4",
     "@types/eslint-plugin-prettier": "^3.1.0",
-    "@types/jest": "^27.4.1",
+    "@types/jest": "^27.5.1",
+    "@types/mocha": "^9.1.1",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
     "eslint": "^8.9.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "^27.2.5",
+    "mocha": "^10.0.0",
     "prettier": "^2.5.1",
     "start-server-and-test": "^1.11.6",
     "ts-jest": "^27.1.4",
